feat: updates swagger for getDailySummary/Deatils and move routes from operation to wallet
